--- a/templates/contato.html
+++ b/templates/contato.html
@@ -17,7 +17,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="http://calculadoramercadolivre.com.br/contato">Contato</a></li>
               <li><a href="https://energialivre.cemig.com.br/duvidas-frequentes/">Dúvidas?</a></li>
-              <li><a href="http://calculadoramercadolivre.com.br/#">Home</a></li>
+              <li><a href="http://calculadoramercadolivre.com.br/">Home</a></li>
             </ul>
           </div>
         </nav>
