--- a/templates/livre.html
+++ b/templates/livre.html
@@ -95,7 +95,7 @@
 -->
                 <button type="submit" class="btn btn-primary">Calcular Preço informando o Desconto</button>
                 <button type="submit" class="btn btn-primary">Calcular Desconto</button>
-<!--<a href="http://carolineruella.pythonanywhere.com/metodologia">Deseja entender a Metodologia?</a>-->
+<!--<a href="http://calculadoramercadolivre.com.br/metodologia">Deseja entender a Metodologia?</a>-->
             </form>
         </div>
         </div>
