--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -329,7 +329,7 @@
                     <small id="emailHelp" class="form-text text-muted"></small>
                 </div>
                 <button type="submit" class="btn btn-primary">Calcular</button>
-                <a href="http://carolineruella.pythonanywhere.com/metodologia">Deseja entender a Metodologia?</a>
+                <a href="http://calculadoramercadolivre.com.br/metodologia">Deseja entender a Metodologia?</a>
             </form>
         </div>
         </div>
