--- a/templates/teste.html
+++ b/templates/teste.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Teste</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+<title>Home</title>
+<style>
+  .welcome-message {
+    text-align: center;
+    margin-top: 50px; /* Espaçamento adicional para afastar a mensagem da barra de navegação */
+    font-size: 2em; /* Tamanho de fonte semelhante ao do título */
+  }
+  /* Adiciona espaço entre os botões */
+  .btn-group > .btn {
+    margin-right: 30px;
+  }
+</style>
 </head>
 <body>
-hello baby
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand">Calculadora de Desconto no Mercado Livre de Energia</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="https://energialivre.cemig.com.br/duvidas-frequentes/">Dúvidas?</a></li>
+      <li><a href="http://calculadoramercadolivre.com.br/contato">Contato</a></li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="welcome-message">
+        <h1>Bem-vindo à Calculadora de Descontos do Mercado Livre!</h1>
+        <p>Explore nosso projeto e simule seus descontos agora mesmo.</p>
+        <div class="btn-group">
+          <a href="http://calculadoramercadolivre.com.br/metodologia" class="btn" style="background-color: #A6A6A6; color: white;">Conheça o Projeto</a>
+          <a href="http://calculadoramercadolivre.com.br/simulacao-preco" class="btn" style="background-color: #556B2F; color: white;">Faça a Sua Simulação</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
